Fix score moving on mobile devices

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,13 +4,13 @@
 
 @keyframes gradient {
     0% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
     50% {
         background-position: 100% 50%;
     }
     100% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
 }
 
@@ -76,7 +76,7 @@ body {
     cursor: pointer;
     letter-spacing: 1px;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.9);
-    background: #434343 none repeat scroll 0% 0%;
+    background: #434343 none repeat scroll 0 0;
     border: 1px solid #242424;
     border-radius: 4px;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.25),
@@ -196,7 +196,4 @@ body {
     font-size: 32px;
     text-align: center;
     color: #fff;
-    position: absolute;
-    top: 24px;
-    width: 100%;
 }
